--- a/animal-grooming/package.json
+++ b/animal-grooming/package.json
@@ -12,10 +12,13 @@
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "prisma": "^5.10.2",
     "typescript": "^5.3.3"
   }
